# collegework

./: .gitignore
sem1_fcasd/: assignment1.asm  assignment2.asm  run.sh
sem1_pps/: add_matrices.c
sem2/fcasd/: FCASD CCA-2 Circuit Diagram.drawio  assignment1.asm  assignment2.asm  assignment3.asm  run.sh
sem2/pps/: .clang-format  .gitignore  CMakeLists.txt  assignment10_calendar.c  assignment4_matrices.c  assignment5_strings.c  assignment6_factorial.c  assignment7_structs.c  assignment8_swap.c  assignment9_filehandling.c  binary_to_decimal.c  calculator.c  decimal_to_any.c  decimal_to_binary.c  library_management.c  matrices.c  strings.c
sem3/dsl/: assignment1.c  assignment2.c  assignment3.c  assignment4.c  assignment4_with_queue.c  assignment5.c  assignment6.c  assignment7.c  assignment8.c
sem3/ooc/: .gitignore  assignment1.cpp  assignment2.cpp  assignment3.cpp  assignment4.cpp  assignment5.cpp  assignment6.cpp  assignment7.cpp  assignment8.cpp  miniproject.cpp
sem3/pbl/: assignment1.asm  assignment1_prac1.asm  assignment2.asm  assignment3.asm  assignment4.asm  assignment5_cat.asm  assignment6_cp.asm  assignment7_16bitaddition.asm  assignment7_arrayaddition.asm  assignment8_blocktransfer.asm  miniproject.asm  miniproject_algo.txt  run.sh
sem4/cn/: assignment4.cpp  assignment5.cpp  assignment8_client.cpp  assignment8_server.cpp
sem4/dbms/: assignment6.py
sem4/pbl/: assignment1.cpp  assignment2.cpp  assignment2_input.txt  assignment3.cpp  assignment3_input.txt  assignment4.cpp  assignment5.cpp  assignment6.cpp  assignment7.cpp
sem5/: iot
sem5/aiesl/: assignment1.cpp  assignment2.py  assignment3.py  assignment4.py
sem5/aiesl/miniproject/: .gitignore  README.md  main_v1.py  main_v2.py  main_v3.py  main_v4_combined.py  main_v4_reducededges.py  main_v4_sharedgraph.py  main_v5.py  output.txt  output_synthetic.txt  pyproject.toml
sem5/bdt/: assignment1.txt  assignment1_b.txt  assignment2.txt  assignment8.txt
sem5/osl/: assignment1_calculator.sh  assignment1_part2.sh  assignment2.sh  assignment2_a.c  assignment2_b.c  (+9 more)
sem6/mll/: .gitignore  Assignment1.docx  Assignment1.ipynb  Assignment2.ipynb  Assignment3.ipynb  Assignment4.ipynb  Assignment5.ipynb  Assignment6.ipynb  MLL_Project_Report_IEEE.tex  Mini_Project.ipynb  flight_price_dashboard.py  flight_price_prediction.py  predict_flight_price.py  pyproject.toml
sem6/mll/.github/prompts/: plan-flightPricePrediction.prompt.md
sem6/mll/outputs/flight_price/: model_comparison.csv
(+121 files in other folders)
