[project]
name = "food"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "faiss-cpu>=1.12.0",
    "networkx>=3.2.1",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.1",
    "torch==2.1.0",
    "torch-geometric>=2.6.1",
    "torchdata==0.7.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

torchvision = [
  { index = "pytorch-cpu", marker = "platform_system == 'Linux'" },
]

dgl = [
#  { index = "dgl-win-cu121", marker = "sys_platform == 'win32' and extra == 'cu121'" },
#  { index = "dgl-cu121", marker = "sys_platform != 'win32' and extra == 'cu121' and extra != 'cu124'" },
  { index = "dgl-cpu", marker = "sys_platform != 'win32'" },
# and extra == 'cpu' and extra != 'cu121' and extra != 'cu124'" },
]

[[tool.uv.index]]
name = "dgl-win-cu121"
url = "https://data.dgl.ai/wheels/cu121/repo.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "dgl-cu121"
url = "https://data.dgl.ai/wheels/torch-2.3/cu121/repo.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "dgl-cpu"
url = "https://data.dgl.ai/wheels/torch-2.4/repo.html"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
